# sounddevices

./: CMakeLists.txt  README.md
src/: device.cpp  device.h  main.cpp
